v2-with all experimental files

--- a/templates/code.html
+++ b/templates/code.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Index</title>
+    <title>QR Code</title>
+    <h1>***** YOUR QR CODE *****</h1>
+        <style>
+        body { background-color: LightGreen; }
+		h1 { color: blue; }
+        p { color: red; }
+    </style>
 </head>
 <body>
     <img src="{{ qr_image }}" alt="User Image">
