--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
    <h1>          *********  Welcome to QR code generator  *********          </h1>
    <img src="/static/cute_cat.jpeg" alt="Kitties" width="300" height="400">
    <form action = "http://localhost:8888/generate" method = "get">
-       <button type="submit">Let's create a qr code</button>
+       <button type="submit">Let's create a QR code</button>
    </form>
 </body>
 </html>
