--- a/templates/input.html
+++ b/templates/input.html
@@ -1,6 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Input</title>
+        <h1> Please enter your input.</h1>
+        <style>
+            body { background-color: Blue; }
+            h1 { color: red; }
+            p { color: red; }
+        </style>
+    </head>
    <body>
-      <form action = "http://localhost:8888/qr" method = "post">
+      <form action = "http://localhost:8888/qrcode" method = "post">
           <p>Enter text:</p>
           <p><input type = "text" name = "input_text" /></p>
           <p><input type = "submit" value = "submit" /></p>
